syntax = "proto3";

package sde;

enum Locale {
    EN = 0;
    DE = 1;
    FR = 2;
    JA = 3;
    RU = 4;
    ZH = 5;
}

service TypeQuery {
    rpc FindTypesByTypeIds (TypeIdRequest) returns (TypeResponse) {
    };
    rpc FindTypesByTypeNames (TypeNameRequest) returns (TypeResponse) {
    };
    rpc SearchForTypes (TypeNameRequest) returns (TypeNameAndIdResponse) {
    };
}

message TypeIdRequest {
    repeated int32 TypeId = 1;
    Locale Locale = 2;
}

message TypeNameRequest {
    repeated string TypeName = 1;
    Locale Locale = 2;
}

message TypeResponse {
    repeated Type Type = 1;
}

message TypeNameAndIdResponse {
    repeated int32 TypeId = 1;
    repeated string Name = 2;
}

message Type {
    int32 TypeId = 1;
    float BasePrice = 2;
    float Capacity = 3;
    string Description = 4;
    int32 GraphicId = 5;
    int32 GroupId = 6;
    int32 IconId = 7;
    int32 MarketGroupId = 8;
    float Mass = 9;
    string Name = 10;
    int32 PortionSize = 11;
    bool Published = 12;
    float Radius = 13;
    string FactionName = 14;
    float Volume = 15;
}